--- a/public/css/paginas/global.css
+++ b/public/css/paginas/global.css
@@ -1,3 +1,112 @@
 h3{
     margin-bottom: 0px;
 }
+
+/* Estilo para que los campos de las tablas no se acomoden hacia abajo */
+.noWrap { white-space: nowrap; }
+
+/* EStilos para las alertas sweetalert2 */
+.colored-toast.swal2-icon-success {
+  background-color: #a5dc86 !important;
+  /* opacity: 0.9; */
+}
+  
+.colored-toast.swal2-icon-error {
+  background-color: #f27474 !important;
+  /* opacity: 0.9; */
+}
+
+.colored-toast.swal2-icon-warning {
+  background-color: #f8bb86 !important;
+  /* opacity: 0.9; */
+}
+
+.colored-toast.swal2-icon-info {
+  background-color: #3fc3ee !important;
+  /* opacity: 0.9; */
+}
+
+.colored-toast.swal2-icon-question {
+  background-color: #87adbd !important;
+  /* opacity: 0.9; */
+}
+
+.colored-toast .swal2-title {
+  color: white !important;
+}
+
+.colored-toast .swal2-close {
+  color: white !important;
+}
+
+.colored-toast .swal2-html-container {
+  color: white !important;
+}
+.swal2-popup.swal2-toast {
+  padding: .5em 1em !important;
+  display: flex !important;
+  width: 18em !important;
+  height: 4.3em !important;
+}
+.swal2-popup.swal2-toast .swal2-title {
+  margin: .75em .25em !important;
+  margin-left: .73em !important;
+}
+
+.swal2-container .swal2-popup.swal2-toast {
+  flex-direction: column;
+  align-items: start;
+}
+
+.swal2-container .swal2-popup.swal2-toast .swal2-content {
+  margin-left: 50px;
+}
+
+.modal-header {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 0.5rem;
+  border-bottom: 1px solid #e9ecef;
+  border-top-left-radius: calc(.3rem - 1px);
+  border-top-right-radius: calc(.3rem - 1px);
+}
+
+.modal-footer {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  padding: 0rem;
+  border-top: 1px solid #e9ecef;
+  border-bottom-right-radius: calc(.3rem - 1px);
+  border-bottom-left-radius: calc(.3rem - 1px);
+}
+
+/* Estilo color azúl para boton input file*/
+.choose::-webkit-file-upload-button {
+  color: white;
+  display: inline-block;
+  background: #1CB6E0;
+  border: none;
+  padding: 7px 15px;
+  font-weight: 700;
+  border-radius: 3px;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 10pt;
+}
