--- a/public/css/paginas/global.css
+++ b/public/css/paginas/global.css
@@ -110,3 +110,9 @@ h3{
   cursor: pointer;
   font-size: 10pt;
 }
+
+.elemento_titulo_grupo{
+  border: none;
+  background-color: #0000000d;
+  color: white;
+}
