--- a/public/css/paginas/principal.css
+++ b/public/css/paginas/principal.css
@@ -1,8 +1,8 @@
 #contenedor_paginas{
-    height:100vh;
+    /* height:100vh; */
 }
 
 #contenedor_lista_tableros{
-    border:none;
-    background-color: transparent;
+    /* border:none;
+    background-color: transparent; */
 }
