--- a/public/css/paginas/global.css
+++ b/public/css/paginas/global.css
@@ -107,3 +107,18 @@ h3{
   padding: 5px;
   vertical-align: middle;
 }
+
+#tabla_usuarios, #tabla_tipos_usuario{
+  margin-bottom: 1px !important;
+}
+
+.table td{
+  padding: 5px !important;
+}
+
+.paginate_button{
+  /* padding: 0.125rem 0.25rem; */
+  font-size: .75rem;
+  line-height: 1.5;
+  border-radius: 0.15rem;
+}
