--- a/public/css/paginas/global.css
+++ b/public/css/paginas/global.css
@@ -122,3 +122,8 @@ h3{
   line-height: 1.5;
   border-radius: 0.15rem;
 }
+
+.form-control:disabled, .form-control[readonly]{
+  background-color: #ffffff00;
+  opacity: 1;
+}
