--- a/public/css/paginas/global.css
+++ b/public/css/paginas/global.css
@@ -1,7 +1,3 @@
-h3{
-  margin-bottom: 0px;
-}
-
 /* Estilo para que los campos de las tablas no se acomoden hacia abajo */
 .noWrap { white-space: nowrap; }
 
@@ -42,6 +38,7 @@ h3{
 .colored-toast .swal2-html-container {
   color: white !important;
 }
+
 .swal2-popup.swal2-toast {
   padding: .5em 1em !important;
   display: flex !important;
@@ -54,7 +51,7 @@ h3{
 }
 
 .swal2-container .swal2-popup.swal2-toast {
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: start;
 }
 
